--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           </div>
         </nav>
     </header>
-    <main>
-        <section class="titulo">
+    <main class="fondo_huellas">
+        <section>
             <h1>Huellas a Casa</h1>
             <h2><em>Buscando un hogar que los ayude a dejar su huella</em></h2> 
             <br>
@@ -54,13 +54,13 @@
             <div id="carouselExampleInterval" class="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./img/perro_simba.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/gato_oreo.JPG" class="d-block w-100" alt="Gato mirando a la camara">
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./img/perro_rocky.PNG" class="d-block w-100" alt="...">
+                    <img src="./img/perro_thor.JPG" class="d-block w-100" alt="Perro mirando a la camara">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/perro_sam.PNG" class="d-block w-100" alt="...">
+                    <img src="./img/gato_ceniza.JPG" class="d-block w-100" alt="Gato en el bosque">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -74,18 +74,7 @@
               </div>
         </section>
         <section>
-            <p class="texto_general">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus amet sequi
-                voluptates nesciunt? Numquam provident dolorum natus aspernatur obcaecati, est in atque sapiente
-                mollitia perferendis reiciendis, veritatis iure doloremque dignissimos iste, tenetur accusamus qui omnis
-                ratione officiis quisquam? Laboriosam dolore architecto libero quam nisi, eaque reprehenderit nulla
-                cupiditate? Expedita facere qui minus ut ea officia delectus nesciunt neque mollitia suscipit, aperiam
-                dicta natus nobis repudiandae quas asperiores provident quam, unde commodi modi nisi dignissimos debitis
-                consectetur ipsa. Suscipit magnam aspernatur tempora esse quos distinctio nemo dignissimos similique
-                facilis iure repellendus quod iste quae quia velit omnis sequi possimus, eos quis ut sint ipsam veniam
-                minima? Minima, dolore! Obcaecati nisi, fugit nobis cupiditate ad dolorum nam consequuntur et incidunt.
-                Provident vel sit libero quaerat dolorem rem voluptatibus illum modi eos maxime quis cupiditate
-                similique voluptates, corrupti vero doloribus officia! Et veniam architecto quos ad obcaecati magni
-                neque asperiores molestiae perspiciatis fuga.
+            <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin alimentarse de manera correcta, <strong>elegí hacer la diferencia. Elegí darles un lugar a los que tanto lo necesitan. Elegí darles un hogar para que puedan dejar su huella para siempre</strong>.
             </p>
         </section>
     </main>
