--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -44,48 +44,48 @@
           </nav>
     </header>
     <main>
-        <section class="fondo_mascotas">
-            <h2 class="titulo_pages">Adopción</h2>
+        <section class="fondo_huellas">
+            <h2 class="titulo_pages">ADOPCIÓN</h2>
             <br>
             <form>
                 <div class="mb-3">
-                  <label for="name" class="form-label">Nombre</label>
+                  <label for="name" class="form-label fw-semibold">Nombre</label>
                   <input type="text" class="form-control" id="name">
                 </div>
                 <div class="mb-3">
-                  <label for="surname" class="form-label">Apellido</label>
+                  <label for="surname" class="form-label fw-semibold">Apellido</label>
                   <input type="text" class="form-control" id="surname">
                 </div>
                 <div class="mb-3">
-                    <label for="phone" class="form-label">Teléfono</label>
+                    <label for="phone" class="form-label fw-semibold">Teléfono</label>
                     <input type="tel" class="form-control" id="phone">
                 </div>
                 <div class="mb-3">
-                    <label for="address" class="form-label">Dirección</label>
+                    <label for="address" class="form-label fw-semibold">Dirección</label>
                     <textarea class="form-control" id="address" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Correo electrónico</label>
+                    <label for="email" class="form-label fw-semibold">Correo electrónico</label>
                     <input type="email" class="form-control" id="email">
                 </div>
                 <div class="mb-3">
-                    <label for="age" class="form-label">Edad</label>
+                    <label for="age" class="form-label fw-semibold">Edad</label>
                     <input type="number" class="form-control" id="age">
                 </div>
                 <div class="mb-3">
-                    <label for="reason" class="form-label">Motivos para adoptar</label>
+                    <label for="reason" class="form-label fw-semibold">Motivos para adoptar</label>
                     <textarea class="form-control" id="reason" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="home" class="form-label">Tipo de vivienda y cantidad de ambientes</label>
+                    <label for="home" class="form-label fw-semibold">Tipo de vivienda y cantidad de ambientes</label>
                     <textarea class="form-control" id="home" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="space" class="form-label">¿Tu vivienda cuenta con jardín, terraza o balcón?</label>
+                    <label for="space" class="form-label fw-semibold">¿Tu vivienda cuenta con jardín, terraza o balcón?</label>
                     <textarea class="form-control" id="space" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="alone">¿Cuánto tiempo pasaría solo el animal diariamente?</label>
+                    <label for="alone" class="form-label fw-semibold">¿Cuánto tiempo pasaría solo el animal diariamente?</label>
                     <select class="form-select" aria-label="Default select example">
                         <option selected>Elegir una opción</option>
                         <option value="1">Siempre va a haber alguien</option>
@@ -96,7 +96,7 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="expenses">¿Tenés en cuenta el gasto que requiere tener una mascota?</label>
+                    <label for="expenses" class="form-label fw-semibold">¿Tenés en cuenta el gasto que requiere tener una mascota?</label>
                     <div class="form-check">
                     <input class="form-check-input" type="radio" name="expenses" id="expenses">
                     <label class="form-check-label" for="expenses">
@@ -111,11 +111,11 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="pets" class="form-label">¿Tenés mascotas actualmente? ¿Cuántas?</label>
+                    <label for="pets" class="form-label fw-semibold">¿Tenés mascotas actualmente? ¿Cuántas?</label>
                     <textarea class="form-control" id="pets" rows="3"></textarea>
                 </div>
                 <div class="mb-4">
-                <button type="submit" class="btn btn-primary">Enviar formulario</button>
+                <button type="submit" class="btn btn-primary fw-semibold">Enviar formulario</button>
                 </div>
             </form>
         </section>
