--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,25 +43,25 @@
             </div>
           </nav>
     </header>
-    <main class="fondo_mascotas">
+    <main class="fondo_huellas">
         <section>
-            <h2 class="titulo_pages">Contacto</h2>
+            <h2 class="titulo_pages">CONTACTO</h2>
             <br>
             <form>
                 <div class="mb-3">
-                  <label for="name" class="form-label">Nombre</label>
+                  <label for="name" class="form-label fw-semibold">Nombre</label>
                   <input type="text" class="form-control" id="name" aria-describedby="name">
                 </div>
                 <div class="mb-3">
-                  <label for="surname" class="form-label">Apellido</label>
+                  <label for="surname" class="form-label fw-semibold">Apellido</label>
                   <input type="text" class="form-control" id="surname">
                 </div>
                 <div class="mb-3">
-                    <label for="consulta" class="form-label">Consulta</label>
+                    <label for="consulta" class="form-label fw-semibold">Consulta</label>
                     <textarea class="form-control" id="consulta" rows="3"></textarea>
                 </div>
                 <div class="mb-4">
-                    <button type="submit" class="btn btn-primary">Enviar formulario</button>
+                    <button type="submit" class="btn btn-primary fw-semibold">Enviar consulta</button>
                 </div>
             </form>
         </section>
