--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -43,9 +43,9 @@
             </div>
           </nav>
     </header>
-    <main class="fondo_mascotas">
+    <main class="fondo_huellas">
         <section>
-            <h2 class="titulo_pages">Sobre Nosotros</h2>
+            <h2 class="titulo_pages">SOBRE NOSOTROS</h2>
         </section>
         <section>
             <p class="primer_parrafo_nosotros">
