--- a/pages/conocelos.html
+++ b/pages/conocelos.html
@@ -43,15 +43,15 @@
             </div>
           </nav>
     </header>
-    <main class="fondo_mascotas">
+    <main class="fondo_huellas">
         <section>
-            <h2 class="titulo_pages">Conocelos</h2>
+            <h2 class="titulo_pages">CONOCELOS</h2>
             <h3>Te invitamos a conocer a nuestros rescatados, que se encuentran buscando un hogar:</h3>
         </section>
         <div class="contenedor">
         <section class="perros_conocelos">
-            <img src="../img/perro_simba.jpg" alt="Perro en el jardin">
-            <p class="descripcion">SIMBA, 3 años</p>
+            <img src="../img/perro_bruno.JPG" alt="Perro en el jardin">
+            <p class="descripcion">BRUNO, 6 meses</p>
             <p>Amoroso, tranquilo y muy inteligente</p>
         </section>
         <section class="perros_conocelos">
@@ -60,8 +60,8 @@
             <p>Curioso, ágil y compañero</p>
         </section>
         <section class="perros_conocelos">
-            <img src="../img/perro_kira.jpg" alt="Perro en el jardin">
-            <p class="descripcion">KIRA, 2 años</p>
+            <img src="../img/gato_roma.JPG" alt="Gato mirando a la camara">
+            <p class="descripcion">ROMA, 2 años</p>
             <p>Cariñosa, amigable e inteligente</p>
         </section>
         </div>
