--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </div>
         </section>
         <section>
-            <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin alimentarse de manera correcta, <strong>elegí hacer la diferencia. Elegí darles un lugar a los que tanto lo necesitan. Elegí darles un hogar para que puedan dejar su huella para siempre</strong>.
+            <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin ningún cuidado, <strong>elegí hacer la diferencia. Elegí darles un lugar a los que tanto lo necesitan. Elegí darles un hogar para que puedan dejar su huella para siempre</strong>.
             </p>
         </section>
     </main>
