--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-white">
+        <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="logo" src="./img/Huellas a casa.png" alt="Logo Huellas a Casa"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,26 +24,27 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./pages/sobre_nosotros.html">Sobre Nosotros</a>
+                  <a class="nav-link" href="./pages/sobre_nosotros.html">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./pages/conocelos.html">Conocelos</a>
+                  <a class="nav-link" href="./pages/conocelos.html">Conocelos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./pages/adopcion.html">Adopción</a>
+                  <a class="nav-link" href="./pages/adopcion.html">Adopción</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./pages/contacto.html">Contacto</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
     </header>
-    <main class="fondo_huellas">
+    <main>
+      <section class="fondo_huellas">
         <section>
             <h1>Huellas a Casa</h1>
             <h2><em>Buscando un hogar que los ayude a dejar su huella</em></h2> 
@@ -77,6 +78,7 @@
             <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin ningún cuidado, <strong>elegí hacer la diferencia. Elegí darles un lugar a los que tanto lo necesitan. Elegí darles un hogar para que puedan dejar su huella para siempre</strong>.
             </p>
         </section>
+      </section>
     </main>
     <footer>
         <h4>📧 info@huellasacasa.com</h4>
