--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-white">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img class="logo" src="../img/Huellas a casa.png" alt="Logo Huellas a Casa"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,26 +24,27 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="sobre_nosotros.html">Sobre Nosotros</a>
+                    <a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="conocelos.html">Conocelos</a>
+                    <a class="nav-link" href="conocelos.html">Conocelos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="adopcion.html">Adopción</a>
+                    <a class="nav-link" href="adopcion.html">Adopción</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
     </header>
-    <main class="fondo_huellas">
+    <main>
+      <section class="fondo_huellas">
         <section>
             <h2 class="titulo_pages">SOBRE NOSOTROS</h2>
         </section>
@@ -73,6 +74,7 @@
             </p>
             <img class="img_nosotros" src="../img/perro_thor.JPG" alt="Perro mirando a la camara">
         </section>
+      </section>
     </main>
     <footer>
         <h4>📧 info@huellasacasa.com</h4>
