--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Huellas a Casa buscamos que los animales que rescatamos de la calle sean adoptados y puedan tener un hogar que les brinde el cuidado y cariño que necesitan. Ayudanos a hacerlo posible. ¡Elegí hacer la diferencia!">
+    <meta name="keywords" content="PERROS, GATOS, ADOPCIÓN, ADOPCIÓN DE PERROS, ADOPCIÓN DE GATOS, ADOPCIÓN DE ANIMALES, ANIMALES, ANIMALES RESCATADOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/Huellas a casa.png">
-    <title>Huellas a Casa</title>
+    <title>Huellas a Casa | Sobre Nosotros</title>
 </head>
 
 <body>
@@ -46,41 +50,31 @@
     <main>
       <section class="fondo_huellas">
         <section>
-            <h2 class="titulo_pages">SOBRE NOSOTROS</h2>
+            <h2 class="titulo_pages" data-aos="fade-down">SOBRE NOSOTROS</h2>
         </section>
         <section>
             <p class="primer_parrafo_nosotros">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cum fugiat quos illo voluptatibus modi est vitae accusamus, ullam, voluptas quam excepturi recusandae esse neque quidem ducimus, officiis
-                dicta. Porro, culpa. Expedita odio sed aliquid harum quis. Ipsa ad rem nostrum iure harum voluptates
-                quae corrupti nisi ex possimus aliquid incidunt distinctio quis error excepturi similique temporibus
-                dolore, quas voluptate.
+              Esta organización nace a raíz de una problemática que observamos todos los días en el país: <strong>la cantidad de perros que se encuentran en la calle</strong>. Perros que no tienen donde refugiarse, que no tienen alimento constante y nutritivo, no cuentan con cuidado de su salud ni un hogar que les brinde cariño.
             </p>
         </section>
         <br>
         <section class="grid_nosotros">
             <p class="nosotros_texto">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ducimus aperiam alias consectetur
-                esse, odio odit? Officia voluptatem voluptas tempore eos vero laboriosam, quod rem suscipit, laborum eum
-                dolor eius aperiam harum doloribus asperiores nam repellendus architecto? Odit, dignissimos tempora ab
-                aperiam harum quo temporibus. Illum voluptatem sapiente officia optio, quos voluptate nemo sit. Ut, odit
-                mollitia. Vero neque dolor laudantium non accusamus, iste temporibus aspernatur sunt itaque minima
-                nostrum assumenda deleniti numquam alias corrupti quaerat eos labore adipisci nulla praesentium
-                necessitatibus blanditiis? Enim, accusamus. Nulla repudiandae et doloremque necessitatibus porro
-                nesciunt eveniet illum recusandae possimus consectetur earum odit aliquid quisquam iure, debitis
-                repellat velit reprehenderit excepturi impedit ipsa sit laborum rerum. Laboriosam at architecto
-                molestias velit dolor excepturi maxime aliquam accusantium ipsa numquam. Non, commodi deleniti et earum
-                aspernatur, magni ullam sed fuga fugiat assumenda tenetur vel corporis sint eum beatae fugit illo
-                corrupti distinctio similique cupiditate labore omnis.
+              En especial les queremos contar la historia de por qué este proyecto es tan importante para nosotros y cómo nació. Hace unos años, una amiga de la familia encontró a un perro abandonado en la calle, y desde el primer instante, sintió una conexión tan profunda con él que supo que no podía dejarlo allí, sólo y desamparado. En ese momento, ella no podía hacerse cargo de él, así que nos pidió si podíamos cuidarlo unas semanas hasta que encontrara un hogar permanente. El perro llegó a nosotros desnutrido, deshidratado y lleno de miedo. Sin embargo, con el tiempo, empezó a confiar y a mostrar su verdadera esencia: un ser juguetón y lleno de cariño. Cada día, su temor se fue desvaneciendo, y nosotros nos fuimos encariñando más y más con él. Le pusimos el nombre de Polo, y pronto supimos que no podíamos separarnos de él. Polo se convirtió en parte de nuestra familia de manera definitiva, y no hay palabras para describir la alegría que nos ha brindado. Esta experiencia nos inspiró a ayudar a otros animales a encontrar un hogar lleno de amor y cuidado. Queremos que más personas descubran la felicidad que se siente al adoptar a un animal que luego se convierte en una parte indispensable de la familia. Cada historia, cada adopción, es una oportunidad para ofrecer una segunda oportunidad y recibir, a cambio, un amor incondicional.
             </p>
-            <img class="img_nosotros" src="../img/perro_thor.JPG" alt="Perro mirando a la camara">
+            <img class="img_nosotros" src="../img/perro_mediano_pelo_marron.jpg" alt="Perro de tamaño mediano y pelo marrón">
         </section>
       </section>
     </main>
     <footer>
-        <h4>📧 info@huellasacasa.com</h4>
-        <h4>📞 +54 9 11 23039948</h4>
+      <h4><strong>Conectate con nosotros</strong></h4>
+      <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Logo Instagram"></a>
+      <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Logo Facebook"></a>
+      <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Logo Twitter"></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init({   easing: 'ease-out-back',duration: 2000});</script>
 </body>
 
 </html>
