--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Huellas a Casa buscamos que los animales que rescatamos de la calle sean adoptados y puedan tener un hogar que les brinde el cuidado y cariño que necesitan. Ayudanos a hacerlo posible. ¡Elegí hacer la diferencia!">
+    <meta name="keywords" content="PERROS, GATOS, ADOPCIÓN, ADOPCIÓN DE PERROS, ADOPCIÓN DE GATOS, ADOPCIÓN DE ANIMALES, ANIMALES, ANIMALES RESCATADOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./img/Huellas a casa.png">
-    <title>Huellas a Casa</title>
+    <title>Huellas a Casa | Inicio</title>
 </head>
 
 <body>
@@ -46,7 +50,7 @@
     <main>
       <section class="fondo_huellas">
         <section>
-            <h1>Huellas a Casa</h1>
+            <h1 class="animate__animated animate__fadeInRightBig">Huellas a Casa</h1>
             <h2><em>Buscando un hogar que los ayude a dejar su huella</em></h2> 
             <br>
         </section>
@@ -55,13 +59,13 @@
             <div id="carouselExampleInterval" class="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./img/gato_oreo.JPG" class="d-block w-100" alt="Gato mirando a la camara">
+                    <img src="./img/gato_atigrado_gris.jpg" class="d-block w-100" alt="Gato atigrado gris">
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./img/perro_thor.JPG" class="d-block w-100" alt="Perro mirando a la camara">
+                    <img src="./img/perro_pelo_blanco_y_negro.jpg" class="d-block w-100" alt="Perro de tamaño mediano y pelo blanco y negro">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/gato_ceniza.JPG" class="d-block w-100" alt="Gato en el bosque">
+                    <img src="./img/gato_gris_bosque.jpg" class="d-block w-100" alt="Gato de pelo gris en el bosque">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -75,16 +79,20 @@
               </div>
         </section>
         <section>
-            <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin ningún cuidado, <strong>elegí hacer la diferencia. Elegí darles un lugar a los que tanto lo necesitan. Elegí darles un hogar para que puedan dejar su huella para siempre</strong>.
+            <p class="texto_inicio"><strong>Hay muchas formas de que tu casa se vuelva un hogar</strong>. No sólo se trata de las personas que la integran, sino también de la buena compañía, el cuidado y el cariño. Tampoco son sólo los humanos quienes lo buscan y lo necesitan, sino que también es vital para los animales. Con tantos de ellos viviendo en la calle y sin ningún cuidado, <strong>elegí hacer la diferencia. Elegí darles un hogar para que puedan dejar su huella en tu corazón para siempre</strong>.
             </p>
         </section>
       </section>
     </main>
     <footer>
-        <h4>📧 info@huellasacasa.com</h4>
-        <h4>📞 +54 9 11 23039948</h4>
+      <h4><strong>Conectate con nosotros</strong></h4>
+      <a href="https://instagram.com" target="_blank"><img src="./img/instagram.png" alt="Logo Instagram"></a>
+      <a href="https://facebook.com" target="_blank"><img src="./img/facebook.png" alt="Logo Facebook"></a>
+      <a href="https://twitter.com" target="_blank"><img src="./img/twitter.png" alt="Logo Twitter"></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init({   easing: 'ease-out-back',duration: 2000});</script>
 </body>
 
 </html>
