--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Huellas a Casa buscamos que los animales que rescatamos de la calle sean adoptados y puedan tener un hogar que les brinde el cuidado y cariño que necesitan. Ayudanos a hacerlo posible. ¡Elegí hacer la diferencia!">
+    <meta name="keywords" content="PERROS, GATOS, ADOPCIÓN, ADOPCIÓN DE PERROS, ADOPCIÓN DE GATOS, ADOPCIÓN DE ANIMALES, ANIMALES, ANIMALES RESCATADOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/Huellas a casa.png">
-    <title>Huellas a Casa</title>
+    <title>Huellas a Casa | Contacto</title>
 </head>
 
 <body>
@@ -46,7 +50,7 @@
     <main>
       <section class="fondo_huellas">
         <section>
-            <h2 class="titulo_pages">CONTACTO</h2>
+            <h2 class="titulo_pages" data-aos="fade-down">CONTACTO</h2>
             <br>
             <form>
                 <div class="mb-3">
@@ -69,9 +73,13 @@
       </section>
     </main>
     <footer>
-        <h4>📧 info@huellasacasa.com</h4>
-        <h4>📞 +54 9 11 23039948</h4>
+      <h4><strong>Conectate con nosotros</strong></h4>
+      <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Logo Instagram"></a>
+      <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Logo Facebook"></a>
+      <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Logo Twitter"></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init({   easing: 'ease-out-back',duration: 2000});</script>
 </body>
 </html>
